# auth_service/docs/swagger.json
@@ -8,6 +8,33 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login a user",
+                "parameters": [
+                    {
+                        "description": "User Login Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UserLoginRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/signup": {
             "post": {
                 "description": "SignUp a user for the first time",
@@ -58,6 +85,23 @@
                 },
                 "rating": {
                     "type": "integer"
+                }
+            }
+        },
+        "dtos.UserLoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "phone"
+            ],
+            "properties": {
+                "password": {
+                    "description": "required: true",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "required: true",
+                    "type": "string"
                 }
             }
         },
